# citecheck

./: .env.template  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.txt  README.md  ci-requirements.txt  pyproject.toml  requirements-ci.txt  requirements.in  requirements.txt
.github/workflows/: build_lint_test.yml  pypi-publish.yml
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
doc/source/whatsnew/: +citeas-getitem.removal.rst  +codecov.config.rst  +core.feature.rst  +correct-changelog.doc.rst  +customtowncrier.config.rst  +dependabot-freq.config.rst  +design.feature.rst  +dry-run-req-action.config.rst  +licensefile.config.rst  +logo.feature.rst  +new.test.rst  +nonprintable-chars.config.rst  +precommit-vs.config.rst  +pylint-suppress.config.rst  +readme.doc.rst  +type-int-float.test.rst  103.doc.rst  104.config.rst  106.doc.rst  11.feature.rst  111.feature.rst  114.doc.rst  119.config.rst  12.newhome.rst  123.removal.rst  125.bugfix.rst  126.newhome.rst  13.feature.rst  4.config.rst  40.feature.rst  43.doc.rst  5.doc.rst  54.feature.rst  6.doc.rst  61.config.rst  71.feature.rst  82.feature.rst  90.doc.rst  index.rst  releasenotes.rst
requirements/: ci-requirements.txt  requirements.txt
scripts/: compile-requirements.sh  dev-setup.sh
src/citecheck/: __init__.py
src/citecheck/core/: add_cite.py  check_citations.py  cite.py  citeas.py  cited.py  citedmixin.py  errors.py  uncite.py
src/citecheck/core/types/: citable.py  citand.py  citation.py
src/citecheck/decorate/: check_citations.py  cite_output.py  citedinput.py  citedreturn.py  enforcecite.py
tests/citecheck/: test_nothing.py
tests/citecheck/core/: test_check_citations.py  test_citeas.py  test_cited.py  test_errors.py  test_uncite.py
tests/citecheck/decorate/: test_check_citations.py  test_enforcecite.py
