[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Testing",
  "Topic :: Documentation",
  "Typing :: Typed",
]
keywords = [
  "citations",
  "cite",
  "bibliography",
  "annotations",
  "references",
  "bibtex",
  "research",
  "academic",
  "methodology",
  "equations",
]
name = "citecheck"
description = "Run-time protection of citation chains"
authors = [
  { name = "Nathan McDougall", email = "nathan.j.mcdougall@gmail.com" },
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
doc = [
  "tomli",
  "towncrier",
  "sphinx",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-toggleprompt",
  "sphinx-favicon",
]
dev = [
  "pip-tools",
  "setuptools_scm[toml]",
  # These three need to be synced with the versions in .pre-commit-config.yaml
  "black==23.3.0",
  "pylint==3.0.0a6",
  "ruff==0.0.281",
  # ^^^
]
check = [
  "pre-commit",
  "mypy==1.2.0", # Sync with the version in .pre-commit-config.yaml
]
test = ["pytest", "coverage[toml]", "pytest-cov"]
notebook = ["ipykernel", "IPython"]

[project.urls]
"Docs: User Guide" = "https://citecheck.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/nathanjmcdougall/citecheck"
"homepage" = "https://github.com/nathanjmcdougall/citecheck"
"What's New" = "https://citecheck.readthedocs.io/en/latest/whatsnew/releasenotes.html"
"Bug Tracker" = "https://github.com/nathanjmcdougall/citecheck/issues"

[tool.setuptools_scm]
write_to = "src/citecheck/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["citecheck"]
license-files = ["LICENSE.txt"]

[tool.distutils.bdist_wheel]
universal = true

[tool.mypy]
allow_subclassing_any = true
strict = true
exclude = ['tests/', 'doc/']
mypy_path = ["src"]

[tool.towncrier]
directory = "doc/source/whatsnew"
package = "citecheck"
package_dir = "src"
title_format = "{version} ({project_date})"
filename = "doc/source/whatsnew/releasenotes.rst"
[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true
[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true
[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true
[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true
[[tool.towncrier.type]]
directory = "newhome"
name = "Renamings and Relocations"
showcontent = true
[[tool.towncrier.type]]
directory = "test"
name = "Improved Test Suite"
showcontent = true
[[tool.towncrier.type]]
directory = "config"
name = "Development Configuration Changes"
showcontent = true

[tool.ruff]
src = ["src"]
select = [
  # "A",
  # "ANN",
  # "ARG",
  # "B",
  # "BLE",
  # "C90",
  # "COM",
  # "D",
  # "DTZ",
  "E",
  # "EM",
  # "ERA",
  # "EXE",
  "F",
  # "FBT",
  # "G",
  "I",
  # "ICN",
  # "INP",
  # "ISC",
  # "N",
  # "PD",
  # "PGH",
  # "PIE",
  # "PL",
  # "PT",
  # "PTH",
  # "Q",
  # "RET",
  # "RUF",
  # "S",
  # "SIM",
  # "T10",
  # "T20",
  # "TCH",
  # "TID",
  # "TRY",
  # "UP",
  # "W",
  # "YTT",
]
ignore = [
  "F403", # We often use * imports in __init__.py files, and other uses will be checked by pylint
]
line-length = 88 # Sync with pylint
target-version = "py311"

[tool.pylint.messages_control]
max-line-length = 88 # Sync with ruff and black
disable = [
  "import-error",               # When pre-commits are running we don't necessarily have everything installed.
  "line-too-long",              # Already checked by Ruff
  "missing-function-docstring", # We don't require docstrings for tests
  "too-few-public-methods",     # We often have small classes for this package for abstractions
  "useless-object-inheritance", # For mypy explicit inheritance from object is useful
]
ignore-paths = ["^.venv/.*$", "src/.*/_version.py$"]

[tool.black]
line-length = 88 # Sync with pylint
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
  \.git
  | \.venv
  | setup.py
)
'''

[tool.pytest]
console_output_style = ['progress']

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.report]
ignore_errors = true
show_missing = true
exclude_lines = [
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  "AbstractMethodError",
  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if 0:",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",
  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]
